config/xmonad/xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -v0 -outputdir /home/zim/.xmonad/build-x86_64-linux -o /home/zim/.xmonad/xmonad-x86_64-linux

xmonad.hs:1:1: error:
    Could not find module ‘Prelude’
    There are files missing in the ‘base-4.15.1.0’ package,
    try running 'ghc-pkg check'.
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
  |
1 | -- xmonad.hs
  | ^

xmonad.hs:10:1: error:
    Could not find module ‘XMonad’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
10 | import XMonad
   | ^^^^^^^^^^^^^

xmonad.hs:11:1: error:
    Could not find module ‘Data.Monoid’
    There are files missing in the ‘base-4.15.1.0’ package,
    try running 'ghc-pkg check'.
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
11 | import Data.Monoid
   | ^^^^^^^^^^^^^^^^^^

xmonad.hs:12:1: error:
    Could not find module ‘System.Exit’
    There are files missing in the ‘base-4.15.1.0’ package,
    try running 'ghc-pkg check'.
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
12 | import System.Exit
   | ^^^^^^^^^^^^^^^^^^

xmonad.hs:13:1: error:
    Could not find module ‘XMonad.ManageHook’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
13 | import XMonad.ManageHook
   | ^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:14:1: error:
    Could not find module ‘XMonad.Layout.NoBorders’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
14 | import XMonad.Layout.NoBorders
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:15:1: error:
    Could not find module ‘XMonad.Hooks.DynamicLog’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
15 | import XMonad.Hooks.DynamicLog
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:16:1: error:
    Could not find module ‘XMonad.Hooks.RefocusLast’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
16 | import XMonad.Hooks.RefocusLast
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:17:1: error:
    Could not find module ‘XMonad.Actions.DwmPromote’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
17 | import XMonad.Actions.DwmPromote
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:18:1: error:
    Could not find module ‘XMonad.Actions.SwapPromote’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
18 | import XMonad.Actions.SwapPromote
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:19:1: error:
    Could not find module ‘XMonad.Util.NamedScratchpad’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
19 | import XMonad.Util.NamedScratchpad
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:20:1: error:
    Could not find module ‘Graphics.X11.ExtraTypes.XF86’
    There are files missing in the ‘X11-1.10.1’ package,
    try running 'ghc-pkg check'.
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
20 | import Graphics.X11.ExtraTypes.XF86
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:21:1: error:
    Could not find module ‘XMonad.Layout.Reflect’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
21 | import XMonad.Layout.Reflect (reflectHoriz)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:22:1: error:
    Could not find module ‘XMonad.Util.EZConfig’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
22 | import XMonad.Util.EZConfig (additionalKeys)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:24:1: error:
    Could not find module ‘XMonad.Hooks.RefocusLast’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
24 | import XMonad.Hooks.RefocusLast  as R
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:25:1: error:
    Could not find module ‘XMonad.StackSet’
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
25 | import qualified XMonad.StackSet as W
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:26:1: error:
    Could not find module ‘Data.Map’
    There are files missing in the ‘containers-0.6.4.1’ package,
    try running 'ghc-pkg check'.
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
26 | import qualified Data.Map        as M
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
